--- a/css/application.css
+++ b/css/application.css
@@ -94,4 +94,20 @@ body .inner > figure p {margin:0 1.8em 0 1.8em;font-size:90%;  line-height:1.8em
  }
 }
 
-
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px)
+and (-webkit-min-device-pixel-ratio: 2){
+.sp-content {margin:3% 6%; }
+.head .text p {display:inline-table;width:93%;line-height:20px;font-size:90%;margin:20px 0;text-align:justify;
+ }
+}
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px)
+and (-webkit-min-device-pixel-ratio: 1)
+{
+.sp-content {margin:3% 6.2%; }
+.head .text p {font-size:80%;line-height:18px;
+ }
+}
