--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -4,7 +4,7 @@
 @import url("box.css");
 @import url("application.css");
 @import url("video-js.css");
-@import url("device.css");
+@import url("device.css")
 }
 
 html, body, button {
