--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -1,10 +1,9 @@
 @charset "utf-8";
 @import url("application.css");
+@import url("strip.css");
 @import url("box.css");
-@import url("video-js.css");
-@import url("device.css");
 @import url("typography.css");
-@import url("strip.css")
+@import url("video-js.css")
 }
 
 html, body, button {
