--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -4,6 +4,7 @@
 @import url("strip.css");
 @import url("box.css");
 @import url("typography.css");
+@import url("chain.css");
 @import url("video-js.css")
 }
 
@@ -15,56 +16,3 @@ html, body, button {
 
 /* WIP device.css*/
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */html{font-family: sans-serif;-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;text-size-adjust: 100%;font-size: 100%;height:100%; overflow:hidden;}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:bold}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}
-
-.chain div:first-child {width:300px; height:30px; position:absolute; top:50%; left:50%;}
-.chain b {width:3%; height:100%; display:block; float:left; animation:chain 3s infinite;-moz-box-sizing: content-box;
--webkit-box-sizing: content-box;
-box-sizing: content-box;}
-
-.chain b:nth-child(1) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:0.2s !important;}
-.chain b:nth-child(2) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:0.4s !important;}
-.chain b:nth-child(3) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:0.6s !important;}
-.chain b:nth-child(4) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:0.8s !important;}
-.chain b:nth-child(5) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:1.0s !important;}
-.chain b:nth-child(6) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:1.2s !important;}
-.chain b:nth-child(7) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:1.4s !important;}
-.chain b:nth-child(8) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:1.6s !important;}
-.chain b:nth-child(9) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:1.8s !important;}
-.chain b:nth-child(10) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.0s !important;}
-.chain b:nth-child(11) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.2s !important;}
-.chain b:nth-child(12) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.4s !important;}
-.chain b:nth-child(13) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.6s !important;}
-.chain b:nth-child(14) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.8s !important;}
-
-.chain-down div:first-child {width:100%; height:100%; top:0; left:0; margin:0;}
-.chain-down b {width:10%; height:40%; margin:0; animation:chain-down 3s ease-in-out infinite;}
-
-@keyframes chain
-{0%,100%{padding:0;} 50%{padding:0 5%;}}
-
-@keyframes chain-full
-{0%,100%{padding:0;} 50%{padding:0 1%;}}
-
-@keyframes chain-down
-{0%,100%{padding:0;} 50%{padding:3% 0;}}
-
-@media only screen and (-webkit-min-device-pixel-ratio: 2),
-  only screen and (-moz-min-device-pixel-ratio: 2),
-  only screen and (-o-min-device-pixel-ratio: 2/1),
-  only screen and (min-device-pixel-ratio: 2) {
-.chain b:nth-child(1) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:0.2s !important;}
-.chain b:nth-child(2) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:0.6s !important;}
-.chain b:nth-child(3) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:0.6s !important;}
-.chain b:nth-child(4) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:0.8s !important;}
-.chain b:nth-child(5) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:1.0s !important;}
-.chain b:nth-child(6) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:1.2s !important;}
-.chain b:nth-child(7) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:1.4s !important;}
-.chain b:nth-child(8) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:1.6s !important;}
-.chain b:nth-child(9) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:1.8s !important;}
-.chain b:nth-child(10) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:2.0s !important;}
-.chain b:nth-child(11) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:2.2s !important;}
-.chain b:nth-child(12) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:2.4s !important;}
-.chain b:nth-child(13) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:2.6s !important;}
-.chain b:nth-child(14) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:2.8s !important;
-  }
-}
