--- a/css/typography.css
+++ b/css/typography.css
@@ -7,7 +7,7 @@ figure p  {font: 400 1.35em/40px 'Roboto Condensed', sans-serif;}
 
 
 
-#nav li {font: 600 1em/10px 'Roboto Condensed', sans-serif;color:#777;}
+#nav li  {font-family:'Roboto Condensed', sans-serif;font-weight:600;}
 .inner figure p {font: 400 1.15em/2.2em 'Roboto Condensed', sans-serif;color:#888;}
 .inner a {font: 400 0.85em/0em 'Roboto Condensed', sans-serif;color:#777;}
 .text p {font: 400 1.05em/2.1em 'PT Sans', sans-serif;}
