--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -1,11 +1,10 @@
 
 
 /* WIP device.css*/
-/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css*/
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css*/
 
-html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
-
-
+html{line-height:1.15;-webkit-text-size-adjust:100%;}
+body{margin:0;}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 
 /* HEADER HEAD CONTENT LAYOUT
 -------------------------------------------------- */
@@ -312,18 +311,39 @@ img.centered,.aligncenter {display: block;margin: 0 auto 10px;}
 }
 
 
-/* RESPONSIVE TODO ..., CSS3 box-flex     
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    @media screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) and  (-webkit-min-device-pixel-ratio: 2) {
-   }
-}
-@media screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : ) and  (-webkit-min-device-pixel-ratio: 2) {
-  }
-}
--------------------------------------------------- */
+.chain div:first-child {width:300px; height:30px; position:absolute; top:50%; left:50%;}
+.chain b {width:3%; height:100%; display:block; float:left; animation:chain 3s infinite;-moz-box-sizing: content-box;
+-webkit-box-sizing: content-box;
+box-sizing: content-box;}
+
+.chain b:nth-child(1) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:0.2s !important;}
+.chain b:nth-child(2) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:0.4s !important;}
+.chain b:nth-child(3) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:0.6s !important;}
+.chain b:nth-child(4) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:0.8s !important;}
+.chain b:nth-child(5) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:1.0s !important;}
+.chain b:nth-child(6) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:1.2s !important;}
+.chain b:nth-child(7) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:1.4s !important;}
+.chain b:nth-child(8) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:1.6s !important;}
+.chain b:nth-child(9) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:1.8s !important;}
+.chain b:nth-child(10) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.0s !important;}
+.chain b:nth-child(11) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.2s !important;}
+.chain b:nth-child(12) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.4s !important;}
+.chain b:nth-child(13) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.6s !important;}
+.chain b:nth-child(14) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.8s !important;}
+
+.chain-down div:first-child {width:100%; height:100%; top:0; left:0; margin:0;}
+.chain-down b {width:10%; height:40%; margin:0; animation:chain-down 3s ease-in-out infinite;}
+
+@keyframes chain
+{0%,100%{padding:0;} 50%{padding:0 5%;}}
+
+@keyframes chain-full
+{0%,100%{padding:0;} 50%{padding:0 1%;}}
+
+@keyframes chain-down
+{0%,100%{padding:0;} 50%{padding:3% 0;}}
+
+
 
 @media only screen and (min-device-width: 240px) and (max-device-width: 300px)  {
 .head .text p {display:inline-table;width:93%;line-height:20px;font-size:80%;margin:30px 0;}
@@ -365,40 +385,6 @@ and (-webkit-min-device-pixel-ratio: 1)
  }
 }
 
-
-.chain div:first-child {width:300px; height:30px; position:absolute; top:50%; left:50%;}
-.chain b {width:3%; height:100%; display:block; float:left; animation:chain 3s infinite;-moz-box-sizing: content-box;
--webkit-box-sizing: content-box;
-box-sizing: content-box;}
-
-.chain b:nth-child(1) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:0.2s !important;}
-.chain b:nth-child(2) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:0.4s !important;}
-.chain b:nth-child(3) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:0.6s !important;}
-.chain b:nth-child(4) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:0.8s !important;}
-.chain b:nth-child(5) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:1.0s !important;}
-.chain b:nth-child(6) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:1.2s !important;}
-.chain b:nth-child(7) {background: url('../images/bg-bottom-chain.png') top left repeat-x; animation-delay:1.4s !important;}
-.chain b:nth-child(8) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:1.6s !important;}
-.chain b:nth-child(9) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:1.8s !important;}
-.chain b:nth-child(10) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.0s !important;}
-.chain b:nth-child(11) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.2s !important;}
-.chain b:nth-child(12) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.4s !important;}
-.chain b:nth-child(13) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.6s !important;}
-.chain b:nth-child(14) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.8s !important;}
-
-.chain-down div:first-child {width:100%; height:100%; top:0; left:0; margin:0;}
-.chain-down b {width:10%; height:40%; margin:0; animation:chain-down 3s ease-in-out infinite;}
-
-@keyframes chain
-{0%,100%{padding:0;} 50%{padding:0 5%;}}
-
-@keyframes chain-full
-{0%,100%{padding:0;} 50%{padding:0 1%;}}
-
-@keyframes chain-down
-{0%,100%{padding:0;} 50%{padding:3% 0;}}
-
-
 @media only screen and (-webkit-min-device-pixel-ratio: 2),
   only screen and (-moz-min-device-pixel-ratio: 2),
   only screen and (-o-min-device-pixel-ratio: 2/1),
@@ -419,4 +405,17 @@ box-sizing: content-box;}
 .chain b:nth-child(14) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:2.8s !important;
   }
 }
+
+ /* RESPONSIVE TODO ..., CSS3 box-flex     
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    @media screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) and  (-webkit-min-device-pixel-ratio: 2) {
+   }
+}
+@media screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : ) and  (-webkit-min-device-pixel-ratio: 2) {
+  }
+}
+-------------------------------------------------- */
 
