--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -196,26 +196,19 @@ input.sp-selector-5:checked ~ .sp-content .sp-slider > li:nth-child(5){
 -------------------------------------------------- */
 section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
 #s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;}
-.page{position:relative;display:inline-block;vertical-align:top;width:100%;height:100%;}
-.page > .pageContent{margin:0;width:100%;height:auto;background:#fff;}
-.page > .pageContent > article{width:100%;height:100%;position:absolute;z-index:9999;}
-.page > .pageContent > article h2{margin:0;padding:5px;background-color: #111;width:4%;color:#fff;}
-.page > .pageContent > article p{background-color: #FFFFFF;margin:0;padding:5px;width:100%;}
-.page > .pageContent > article em{color:#e60559;}
-.page > .pageContent > #slider2 > figure img{position: absolute;z-index: -1;top:11%;bottom:25px;}
-.page > .pageContent > aside.scd {background-color:#fff;width:100%;height:100%;}
-.page > .pageContent > aside.scd > article h2 {margin:0;padding:5px;background-color: #111;width:4%;color:#fff;text-transform: uppercase;}
+.pages{position:relative;display:inline-block;vertical-align:top;width:100%;height:100%;}
+.page {position:relative;vertical-align:top;right:1;width:auto;height:auto;}
+.pages > .pageContent{margin:0;width:100%;height:100%;background:#fff;}
+article h2 {position:absolute;z-index:9999;top:0;margin:0px;padding:5px;background-color: #111;width:4%;color:#fff;text-transform: uppercase;}
+.pages > div img {float:right;margin:0}
 
-#slideIndex{position: absolute;width: 100%;bottom:0;text-align: center;z-index: 100;}
+#slideIndex{position: absolute;width: 100%;bottom:0;text-align: center;z-index: 100;background:#111111;}
 #slideIndex .idxContainer{display: inline-block;margin:0;padding:0;}
 #slideIndex .idxPage{
     display: inline-block;
     margin:0;
   }
 #slideIndex .idxPage.sel{}
-
-
-
 
 section#content{position:absolute;overflow:hidden;z-index:999;margin: 0 auto;text-align:center;background:#fff;}    
 
