--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -199,7 +199,7 @@ section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
 .page{position:relative;z-index:-1;width:100%;height:100%;background:#fff;}
 .page > div img {float:left;margin:0}
 article > h2 {position:absolute;z-index:9999;top:0;left:0;padding-left:4px;line-height:1.2em;background-color: #111;width:2%;color:#fff;text-transform: uppercase;}
-figure > h1 {position:absolute;z-index:9999;top:5%;left:5%;padding-left:4px;line-height:1.2em;background-color: #fff;width:2%;color:#111;text-transform: uppercase;}
+figure > h1 {position:absolute;z-index:9999;top:5%;padding:0.5em 1.3em;background-color: #fff;width:2%;color:#111;text-transform: uppercase;}
 
 #slideIndex{position: absolute;width: 100%;bottom:0;text-align: center;z-index: 100;background:#111111;}
 #slideIndex .idxContainer{display: inline-block;margin:0;padding:0;}
