--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -197,7 +197,7 @@ input.sp-selector-5:checked ~ .sp-content .sp-slider > li:nth-child(5){
 section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
 #s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;}
 .page{position:relative;z-index:-1;width:100%;height:100%;background:#fff;}
-.page > div img {float:left;margin:0}
+.page > div img {float:left;margin:0;}
 article > h2 {position:absolute;z-index:9999;top:0;left:0;padding:0.5em 1.3em;line-height:1.2em;background-color: #111;width:auto;color:#fff;text-transform: uppercase;}
 figure > h1 {position:absolute;z-index:9999;top:5%;padding:0.5em 0.9em;background-color: #fff;width:auto;color:#111;text-transform: uppercase;}
 
