--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -197,7 +197,7 @@ section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
 .pageContent {background:#fff}
 .page > div {float:left;margin:auto;height:100%;width:100%;background:#fff;}
 .page > div img {float:left;margin:-2em 0 0 0;height:80%;}
-#sec div {background:#020109;}
+#sec > div{background:#020109;}
 article > h2 {position:absolute;z-index:9999;top:0;left:0;padding:0.5em 1.3em;line-height:1.2em;background-color: #111;width:auto;color:#fff;text-transform: uppercase;}
 figure > h1 {position:absolute;z-index:9999;top:7%;padding:0.5em 0.9em;background-color: #fff;width:auto;color:#111;text-transform: uppercase;}
 
