--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -200,9 +200,11 @@ section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
 #sec > div{background:#020109;}
 article > h2 {position:absolute;z-index:9999;top:0;left:0;padding:0.5em 1.3em;line-height:1.2em;background-color: #111;width:auto;color:#fff;text-transform: uppercase;}
 figure > h1 {position:absolute;z-index:9999;top:7%;padding:0.5em 0.9em;background-color: #fff;width:auto;color:#111;text-transform: uppercase;}
-article > p {position:absolute;z-index:9999;top:0;right:0;margin:2.3em 0 2.3em 0;padding:5.5em;line-height:5.2em;background:#020109;width:auto;color:#fff;text-transform:uppercase;letter-spacing:2px;}
-article > p a {margin:auto;padding:1.5em 0 1.5em;line-height:5.2em;background:#020109;width:auto;color:#fff;text-transform:lowercase;letter-spacing:2px;}
 
+
+article.blanc > p, article.blanc > a
+{position:absolute;top:0;right:0;display:inline-block;z-index:9999;margin:1.5em 1.5em 1.5em 0;padding:2.5em 0 2.5em 0;line-height:3.2em;background:#020109;width:auto;color:#fff;text-transform:uppercase;letter-spacing:2px;}
+article.blanc > p a {text-transform:lowercase;}
 
 #slideIndex{position: absolute;width: 100%;bottom:0;text-align: center;z-index: 100;background:#111111;}
 #slideIndex .idxContainer{display: inline-block;margin:0;padding:0;}
