--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -201,10 +201,12 @@ section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
 article > h2 {position:absolute;z-index:9999;top:0;left:0;padding:0.5em 1.3em;line-height:1.2em;background-color: #111;width:auto;color:#fff;text-transform: uppercase;}
 figure > h1 {position:absolute;z-index:9999;top:7%;padding:0.5em 0.9em;background-color: #fff;width:auto;color:#111;text-transform: uppercase;}
 
-
 article.blanc > p, article.blanc > a
-{position:absolute;top:0;right:0;display:inline-block;z-index:9999;margin:1.5em 1.5em 1.5em 0;padding:2.5em 0 2.5em 0;line-height:3.2em;background:#020109;width:auto;color:#fff;text-transform:uppercase;letter-spacing:2px;}
+{position:absolute;top:0;right:0;display:inline-block;z-index:9999;margin:1.5em 0 1.5em 0;padding:2.5em;line-height:3.2em;background:#020109;width:auto;color:#fff;text-transform:uppercase;letter-spacing:2px;}
 article.blanc > p a {text-transform:lowercase;}
+
+#desc
+{float:left;display:inline-block;width:4em;margin:9.5em 1em 0 95em;padding:2.5em 1em 2.5em 2em;line-height:3.2em;background:#020109;width:auto;color:#fff;text-transform:lowercase;letter-spacing:2px;}
 
 #slideIndex{position: absolute;width: 100%;bottom:0;text-align: center;z-index: 100;background:#111111;}
 #slideIndex .idxContainer{display: inline-block;margin:0;padding:0;}
