--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -22,7 +22,7 @@ box-shadow: 0 1px 25px #111;}
 /* TODO FUNCTION NAV
 -------------------------------------------------- */
 
-#nav {position: relative;background:#020109 url('../images/bg-sign.png') 0 -380px repeat-x;border-top:0.1rem dashed rgba(255,255,255,0.2);box-shadow:1px 1px 1px 1px  rgba(0,0,0,0.2);bottom:0; border-bottom:0.1rem dashed rgba(255,255,255,0.2);margin:0;}
+#nav {position: relative;background:#020109;border-top:0.1rem dashed rgba(255,255,255,0.2);box-shadow:1px 1px 1px 1px  rgba(0,0,0,0.2);bottom:0; border-bottom:0.1rem dashed rgba(255,255,255,0.2);margin:0;}
 #nav ul {list-style:none;margin:0 4% 0 3.8%;padding:0;text-align:center;}
 #nav li {margin:0 -4px 0 0;padding:0;text-align:center;display:inline-block;width:25%;font-size:18px;text-transform:uppercase;letter-spacing:2px;}
 nav a {text-decoration:none;color:#7d7d79;padding:33px 0;display:block;border-width:0.1rem dashed rgba(255,255,255,0.2);border-left:0.1rem dashed rgba(255,255,255,0.2);}
