--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -194,8 +194,8 @@ input.sp-selector-5:checked ~ .sp-content .sp-slider > li:nth-child(5){
 section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
 #s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;}
 .page{position:relative;z-index:-1;width:100%;height:100%;}
-.pageContent {background:#fff}
-.page > div {float:left;margin:auto;height:100%;width:100%;background:#fff;}
+.pageContent {background:#020109;}
+.page > div {float:left;margin:auto;height:100%;width:100%;background:#020109 url(../images/retina/bg-sign@2x.png) top left repeat-x;}
 .page > div img {float:left;margin:-2em 0 0 0;height:80%;}
 article > h2 {position:absolute;z-index:9999;top:0;left:0;padding:0.5em 1.3em;line-height:1.2em;background-color: #111;width:auto;color:#fff;text-transform: uppercase;}
 figure > h1 {position:absolute;z-index:9999;top:7%;padding:0.5em 0.9em;background-color: #fff;width:auto;color:#111;text-transform: uppercase;}
@@ -204,9 +204,9 @@ article.blanc > p, article.blanc > a
 article.blanc > p a {text-transform:lowercase;}
 article.blanc > p a:hover {color:#fff;text-transform:lowercase;}
 
-#sec-s-sign > div, #sec-s-text > div, #sec-s-liter > div, #sec-s-video > div {background:#020109;}
 #desc-s-sign,#desc-s-text,#desc-s-liter,#desc-s-video
-{float:left;display:inline-block;width:4em;margin:9.5em 1em 0 95em;padding:2.5em 1em 2.5em 2em;line-height:3.2em;background:#020109;width:auto;color:#fff;text-transform:lowercase;letter-spacing:2px;}
+{float:left;display:inline-block;width:4em;margin:9.5em 0 0 95em;padding:2.5em 1em 2.5em 2em;line-height:3.2em;background:#020109;width:auto;color:#fff;text-transform:lowercase;letter-spacing:2px;}
+
 
 
 #slideIndex{position: absolute;width: 100%;bottom:0;text-align: center;z-index: 100;background:#111111;}
