--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -192,7 +192,7 @@ input.sp-selector-5:checked ~ .sp-content .sp-slider > li:nth-child(5){
 /* SLIDE BOTTOM
 -------------------------------------------------- */
 section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
-#s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;}
+#s-sign, #s-text, #s-liter, #s-video {position:absolute;z-index:1;width:100%;height:100%;background:#020109 url(../images/retina/bg-sign@2x.png) 0 0 repeat-x;overflow:hidden;}
 .page{position:relative;z-index:-1;width:100%;height:100%;}
 .pageContent {background:#020109;}
 .page > div {float:left;margin:auto;height:100%;width:100%;background:#020109 url(../images/retina/bg-sign@2x.png) top left repeat-x;}
