--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -205,9 +205,7 @@ article.blanc > p a {text-transform:lowercase;}
 article.blanc > p a:hover {color:#fff;text-transform:lowercase;}
 
 #desc-s-sign,#desc-s-text,#desc-s-liter,#desc-s-video
-{float:left;display:inline-block;width:4em;margin:9.5em 0 0 95em;padding:2.5em 1em 2.5em 2em;line-height:3.2em;background:#020109;width:auto;color:#fff;text-transform:lowercase;letter-spacing:2px;}
-
-
+{float:right;display:inline-block;margin:9.5em 0 0 60%;padding:2.5em 1em 2.5em 2em;line-height:3.2em;background:#020109;color:#fff;text-transform:lowercase;letter-spacing:2px;}
 
 #slideIndex{position: absolute;width: 100%;bottom:0;text-align: center;z-index: 100;background:#111111;}
 #slideIndex .idxContainer{display: inline-block;margin:0;padding:0;}
