--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -189,7 +189,7 @@ input.sp-selector-5:checked ~ .sp-content .sp-slider > li:nth-child(5){
 }
 
 
-/* SLIDE BOTTOM
+/* SLIDE BOTTOM DEV BDD
 -------------------------------------------------- */
 section #section{position:absolute;width:100%;height:100%;overflow:hidden;background:#020109}
 #s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;background:#020109 url(../images/retina/bg-sign@2x.png) top left repeat-x;}
@@ -197,8 +197,9 @@ section #section{position:absolute;width:100%;height:100%;overflow:hidden;backgr
 .page > div img {float:left;margin:-1.5em 0 0 0;height:80%;}
 article > h2 {position:absolute;z-index:9999;top:1em;left:0;padding:0.5em 1.3em;line-height:1.2em;background-color: #020109;width:auto;color:#fff;text-transform: uppercase;}
 figure > h1 {position:absolute;z-index:9999;top:7%;padding:0.5em 0.9em;background-color: #fff;width:auto;color:#111;text-transform: uppercase;}
+.motif {float:left;margin:1.5em 0 1.5em 0;padding:3.5em 0 0 0;}
 article.blanc > p, article.blanc > a
-{position:absolute;top:0;right:0;display:inline-block;z-index:9999;margin:1.5em 0 1.5em 0;padding:2.5em;line-height:3.2em;background:#020109;width:auto;color:#fff;text-transform:uppercase;letter-spacing:2px;}
+{position:absolute;top:0;right:0;display:inline-block;z-index:9999;margin:0.5em 0 1.5em 0;padding:2.5em;line-height:3.2em;background:#020109;width:auto;color:#fff;text-transform:uppercase;letter-spacing:2px;}
 article.blanc > p a {text-transform:lowercase;}
 article.blanc > p a:hover {color:#fff;text-transform:lowercase;}
 
