--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -189,7 +189,7 @@ input.sp-selector-5:checked ~ .sp-content .sp-slider > li:nth-child(5){
 }
 
 
-/* TODO SLIDE DEV BLOCK BDD À RATIONNALISER
+/* TODO SLIDE DEV BLOCK BDD À RATIONALISER
 -------------------------------------------------- */
 section #section{position:absolute;width:100%;height:100%;overflow:hidden;background:#020109}
 #s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;background:#020109 url(../images/retina/bg-sign@2x.png) top left repeat-x;}
