--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -193,7 +193,7 @@ input.sp-selector-5:checked ~ .sp-content .sp-slider > li:nth-child(5){
 /* TODO SLIDE DEV BLOCK BDD À RATIONALISER
 -------------------------------------------------- */
 section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
-#s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;background:#020109 url(../images/retina/bg-sign@2x.png) top left repeat-x;}
+#s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;background:#020109 url('../images/retina/bg-sign@2x.png') top left repeat-x;}
 .page{position:relative;z-index:-1;width:100%;height:100%;top:0;}
 .page > div img {float:left;margin:-1.5em 0 0 0;height:80%;}
 article > h2 {position:absolute;z-index:9999;top:1em;left:0;padding:0.5em 1.3em;line-height:1.2em;background-color: #020109;width:auto;color:#fff;text-transform: uppercase;}
