--- a/css/typography.css
+++ b/css/typography.css
@@ -1,4 +1,3 @@
-
 /* TODO TYPOGRAPHY
 -------------------------------------------------- */
 
@@ -14,7 +13,7 @@ figure p  {font: 400 1.35em/40px 'Roboto Condensed', sans-serif;}
 
 article > p {font: 400 1em/2.1em 'Titillium Web', sans-serif;color:#888;}
 article > p a {font: 400 0.85em/0em 'Titillium Web', sans-serif;color:#888;}
-article > h3, article > h4 {font: 600 0.85em 'Roboto Condensed', sans-serif;text-transform: uppercase;}
+article > h3, article > h4, article.blanc > h4 {font: 600 0.85em 'Titillium Web', sans-serif;text-transform: uppercase;color:#999;font-weight:600;}
 
 .sp-slider > li h1  {font-family:'PT Sans', sans-serif;font-weight:300;}
 #s-sign h2, #s-text h2, #s-liter h2, #s-video h2{font: 500 0.80em/25px 'Roboto Condensed', sans-serif;}
