--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -37,7 +37,8 @@ a.vim:hover, a.tree:hover{background-color:#fff;border:none;}
 a.vim, a.tree {background-position: 15px 5px;display: block;}
 a.vims, a.trees  {background-position: -31px 5px;display: block;}
 
-div > img.tempo {float:left;margin:3em;padding:20em 5em 25em 5em ;height:80%;}
+div > img.tempo {float:right;margin:3em;padding:20em 0 25em 0 ;width: 100%;height:80%;}
+
 
 
 /* TODO FUNCTION
@@ -50,6 +51,7 @@ div > img.tempo {float:left;margin:3em;padding:20em 5em 25em 5em ;height:80%;}
 
 
 img.rules {margin:-0.3em -0.7em 0 0 ;padding:0;text-align:center;font-size: 130%;width:auto;height:2em;}
+
 p.inners {float:right;margin:0 12em 1em 12em;padding:0.5em;text-align:center;font-size: 100%;}
 p.inners a {margin:0 0 1em;padding:0.5em;font: 400 1em/40px 'Roboto Condensed', sans-serif;color:#C0C2C1;}
 
